Refactored PaginationTester to take Predicate arg.